# ATOM_Brain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alg.txt  imgui.ini
Info/: build_opencv.md
PythonAI/: README.dataset.txt  README.roboflow.txt  comands.txt  data.yaml
PythonAI/test/labels/: Image_106_png.rf.ee6155492fe915674e9ca28a950d4544.txt  Image_150_png.rf.5567823254bc4d6e9988bc150a9238a4.txt  Image_152_png.rf.714533ce5ab0d5863c3bed4f1f5d1988.txt  Image_158_png.rf.0886a25a372f2c7ca470f488695cf2a9.txt  Image_15_png.rf.ae418939993f7be84917c6db121a125f.txt  Image_168_png.rf.c5587210be32c3995e9aa554340a68f4.txt  Image_16_png.rf.617468dbca120c0d7c92ea88a94be908.txt  Image_174_png.rf.a1fb338772bcba6477705bcd6324f3cd.txt  Image_17_png.rf.99bdaa4e8c4585d2561ad20bec1c9a4d.txt  Image_188_png.rf.cced3dec20c2343ffab67289b9a5034d.txt  Image_197_png.rf.6a6cb05533e42ed15292d4ed0d2ffda3.txt  Image_202_png.rf.3c1ec42a791073ca4cec260cb0a010d1.txt  Image_206_png.rf.d8427af28366f16c43b0022127ebb812.txt  Image_236_png.rf.e513c90d22f4732f4db878af4c9600ee.txt  Image_245_png.rf.bae3cb875d3b241e4258b84b274529da.txt  Image_251_png.rf.d15c816439703d18f468c4bc1e89c830.txt  Image_259_png.rf.ed4b29bc9ad27a25ffe1055d9ac9b277.txt  Image_268_png.rf.c2fb5ae4abf516810b81568091b2e4bf.txt  Image_270_png.rf.450833017708c15590c0eed88e377f60.txt  Image_293_png.rf.d9f472e0f00a7abb841fc302cfc0f69f.txt  Image_297_png.rf.4c50c755de84deff36050577c95c5b08.txt  Image_309_png.rf.1bd44fb43f8c7851d6e213b50ee2d213.txt  Image_312_png.rf.c48784ab20197c664eb8522bed6b216d.txt  Image_323_png.rf.0acac0093357dcff29c3f1f873d4c656.txt  Image_32_png.rf.4ee594b45b0bacb6ebcd59e5705cf6ab.txt  Image_333_png.rf.173d433fd319375750cedef52fd43751.txt  Image_345_png.rf.960d6fe2aa7287fe4a1affcd7ef9bc86.txt  Image_354_png.rf.8018e3c04e4fe9b2863dbd43cd4a2fee.txt  Image_355_png.rf.934148013ff2e6898258c4b7623c9c6f.txt  Image_359_png.rf.da04412034369d33d5d498205b97b1a6.txt  Image_365_png.rf.35e12595ce4467b7181a048f2b6eb68c.txt  Image_36_png.rf.00de941859fb61ad3ea620e22399223f.txt  Image_371_png.rf.9bcbbd781bc7648976942281b6e5b28d.txt  Image_399_png.rf.44a6c50b1abf46815c2ddc617369c923.txt  Image_409_png.rf.75b2eb758b3a5ae550ef1e140caa976e.txt  Image_412_png.rf.0a7d6edd8a9766e5f79189bae23cbc39.txt  Image_421_png.rf.10f6a81c30b67b538d3ed599b85a2cd5.txt  Image_432_png.rf.c0e9a681240420cfcbbbf66b4dc6cb68.txt  Image_434_png.rf.2040f4488140b82e71fd5f2ab96e8fb2.txt  Image_448_png.rf.85eec8853b6ea9cbc26e6ce51ab4d33a.txt  (+60 more)
PythonAI/train/: labels.cache
PythonAI/train/labels/: Image_1000_png.rf.b84ab4e7bfd8a4b2cf33a686c4aeb097.txt  Image_100_png.rf.c2540e6e7fa8d307c156e30fa3bb3b26.txt  Image_101_png.rf.119212fbc446b785bf62008c006e9eaa.txt  Image_103_png.rf.2cecfab23315a6d0d76673435d8cc0d9.txt  Image_104_png.rf.2fe574470e809c60dc495634e70c79dd.txt  Image_105_png.rf.e8c581ab5478bd9584b30facfc5c0476.txt  Image_10_png.rf.805cc0f3b753c0f79d3ab92f54dfd251.txt  Image_110_png.rf.9a3bd63b0751d46e382b979fbc17bddb.txt  Image_111_png.rf.0d1f15584d7acc7953f5e498d5793eeb.txt  Image_112_png.rf.844a30d62cc4b160827dba05b7e67cf2.txt  Image_113_png.rf.16acc149a4f67664f47f7a9b5c7d00b3.txt  Image_115_png.rf.ef03f09cb8fb08292d22b14484bc8c17.txt  Image_116_png.rf.a83afb5b3525f5223aec9b4b708e1a47.txt  Image_117_png.rf.318d6a867f9e2b9ea42bdac3c0b2f600.txt  Image_11_png.rf.e00a2c1773fb81c7416839708e6ca523.txt  Image_120_png.rf.d52fd65fe51f9bb3140d36689435e548.txt  Image_121_png.rf.3fb318efce808e398da137d16f92455f.txt  Image_122_png.rf.bf709c6d0c14a26dd3eb96f6954d5a55.txt  Image_123_png.rf.b1f63524593c32ac9153d8ff462c587e.txt  Image_124_png.rf.911f58e31fb88681dc9d9ba2bbdcae8e.txt  Image_125_png.rf.09c075e83c1aecbfdd4ead223a0fc1b0.txt  Image_126_png.rf.a1d08628db519e40d723492b9d4e236d.txt  Image_127_png.rf.eaf2542db909f9b972f04d78ed66373d.txt  Image_128_png.rf.b306df8bdff0f10aabbc99d87a250501.txt  Image_129_png.rf.662e8d131bc9313b6fca2ebc263a5143.txt  Image_12_png.rf.47bd510ce36c88de36980fca8fbf262b.txt  Image_130_png.rf.c11e684a0adc1bfdcbaf76b58504d530.txt  Image_132_png.rf.ca0e776d337e508c158b5d572267006a.txt  Image_133_png.rf.a5259d884850c8e795a721bfc1e18b47.txt  Image_13_png.rf.7a726f746a28b037eec68c1d4d2ce9f0.txt  (+670 more)
PythonAI/valid/: labels.cache
app/: CMakeLists.txt  imgui.ini  main.cpp  testimgui.ini
app/ASSETS/: M.fbx  Traseu.fbx  a.blend  fs.glsl  gamecontrollerdb.txt  mon.fbx  t.fbx  test.mtl  untitled.blend  untitled.mtl  vs.glsl
app/ATOM/: Application.cpp  Application.h  atompch.h
app/ATOM/AI/: TrainEngine.cpp  TrainEngine.h  YoloV8.cpp  YoloV8.h  engine.cpp  engine.h
app/ATOM/Core/: ClientLayer.cpp  ClientLayer.h  Window.h  macros.h
app/ATOM/Core/Editor/: EditorLayer.cpp  EditorLayer.h  FrameBuffer.cpp  FrameBuffer.h  ImGuiLayer.cpp  ImGuiLayer.h  stb_image.cpp  stb_image.h
app/ATOM/Core/Event/: Keyboard.cpp  Keyboard.h  Mause.cpp  Mause.h
app/ATOM/Core/Gui/: EditorLayer.cpp  EditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h
app/ATOM/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
app/ATOM/Core/Loging/: Log.cpp  Log.h
app/ATOM/Core/Renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  stb_image.cpp  stb_image.h
app/ATOM/Core/ScreenData/: DrawMap.cpp  DrawMap.h
app/ATOM/GamePad/: Gamepad.cpp  Gamepad.h
app/ATOM/Map/: DrawMap.cpp  DrawMap.h
app/ATOM/PID/: pid.cpp  pid.h
app/ATOM/RoadDetect/: DetectLines.cpp  DetectLines.h  FindLines.cpp  FindLines.h
app/ATOM/Sensors/: Frame.cpp  Frame.h  ImuLayer.cpp  ImuLayer.h  Lidar.cpp  Lidar.h
app/ATOM/State/: CarState.cpp  CarState.h
app/Networking/: Client.cpp  Client.h  Networking.cpp  Networking.h  Server.cpp  Server.h
app/Platform/Window/: OpenGLWindow.cpp  OpenGLWindow.h  SDLWindow.cpp  SDLWindow.h
app/VideoCapture/: VideoCapture.cpp  VideoCapture.h
cmake/: FindTensorRT.cmake
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/KHR/: khrplatform.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui-cmake/: CMakeLists.txt
libs/myglad/: CMakeLists.txt
setup/: setup.py
(+203 files in other folders)
